@@ -79,14 +79,13 @@ programs.
 <H3>Systems Programming</H3>
 <MENU>
 <LI>
-<A href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/doc/EXAMPLE/SOCKET">SOCKET</A>
-contains some examples implemented in ATS that involve UNIX socket programming.
-<P>
-
-<LI>
 <A href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/doc/EXAMPLE/AUP">AUP</A>
 contains some examples adapted from the book <EM>Advanced UNIX
 Programming</EM> (2nd edition) by Marc Rochkind.
+<P>
+<LI>
+<A href="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/doc/EXAMPLE/SOCKET">SOCKET</A>
+contains some examples implemented in ATS that involve UNIX socket programming.
 <P>
 </MENU>
 
