@@ -185,9 +185,9 @@ ats_double_type atslib_double_of_time (time_t t) { return t ; }
 
 /* ****** ****** */
 //
-// not supported on Mac OSX ?
+// HX: where is [timer_t] declared?
+// typedef timer_t ats_timer_type ; // for timers returned by timer_create ()
 //
-typedef timer_t ats_timer_type ; // for timers returned by timer_create ()
 typedef useconds_t ats_useconds_type ; // for time in microseconds
 typedef suseconds_t ats_suseconds_type ; // for signed time in microseconds
 
